FEE-1168: re-adding overflow: inherit to date-picker.css - looks like he fixed a regression caused by FEE-995

--- a/src/date-picker/_date-picker.scss
+++ b/src/date-picker/_date-picker.scss
@@ -94,6 +94,7 @@ $datepicker-text-color-disabled: #e6e6e6;
     top: 100%;
     min-width: (($datepicker-cell-size + 1) * 7) + ($datepicker-padding * 2) + 2;
     @include box-shadow($global-box-shadow);
+    overflow: inherit;
 
     // Override TWBS
     .btn,
